--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "hQuery\\": "vendor/duzun/hquery/"
         }
     },
     "autoload-dev": {
